fix(CSS, ImageBlock, ScrollingStory): update grid layout for improved responsiveness and add border handling for image blocks based on offset_bleed setting

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -237,37 +237,37 @@ p > strong {
 }
 /* Manueller Fix */
 .col-span-1 {
-  @apply lg:col-span-1;
+  @apply hidden lg:col-span-1;
 }
 .col-span-2 {
-  @apply lg:col-span-2;
+  @apply hidden lg:col-span-2;
 }
 .col-span-3 {
-  @apply lg:col-span-3;
+  @apply col-span-12 md:col-span-3;
 }
 .col-span-4 {
-  @apply lg:col-span-4;
+  @apply col-span-12 md:col-span-4;
 }
 .col-span-5 {
-  @apply lg:col-span-5;
+  @apply col-span-12 md:col-span-6 lg:col-span-5;
 }
 .col-span-6 {
-  @apply col-span-12 lg:col-span-6;
+  @apply col-span-12 md:col-span-6;
 }
 .col-span-7 {
-  @apply col-span-7;
+  @apply col-span-12 md:col-span-7;
 }
 .col-span-8 {
-  @apply col-span-8;
+  @apply col-span-12 md:col-span-8;
 }
 .col-span-9 {
-  @apply col-span-9;
+  @apply col-span-12 lg:col-span-9;
 }
 .col-span-10 {
-  @apply col-span-10;
+  @apply col-span-12 lg:col-span-10;
 }
 .col-span-11 {
-  @apply col-span-11;
+  @apply col-span-12 lg:col-span-11;
 }
 .col-span-12 {
   @apply col-span-12;
